--- a/index.html
+++ b/index.html
@@ -25,6 +25,43 @@
       const db = firebase.firestore();
     </script>
 </head>
+<!-- 
+================================================================================
+  CALCETTO RATING APP
+  © 2025 Luigi Oliviero - Tutti i diritti riservati
+  
+  Questo software è protetto da copyright e leggi sulla proprietà intellettuale.
+  
+  È SEVERAMENTE VIETATO:
+  - Copiare, riprodurre o distribuire questo codice
+  - Creare opere derivate senza autorizzazione scritta
+  - Utilizzare per scopi commerciali senza licenza
+  - Rimuovere o modificare questo avviso di copyright
+  
+  Uso non autorizzato sarà perseguito legalmente secondo le leggi italiane 
+  ed europee sulla proprietà intellettuale.
+  
+  Per licenze commerciali o autorizzazioni: luigi.oliviero@gmail.com
+  
+  ---
+  
+  CALCETTO RATING APP
+  © 2025 Luigi Oliviero - All Rights Reserved
+  
+  This software is protected by copyright and intellectual property laws.
+  
+  STRICTLY PROHIBITED:
+  - Copying, reproducing, or distributing this code
+  - Creating derivative works without written authorization
+  - Commercial use without license
+  - Removing or modifying this copyright notice
+  
+  Unauthorized use will be prosecuted under Italian and European IP laws.
+  
+  For commercial licensing or permissions: luigi.oliviero@gmail.com
+  
+  Version: 1.0 | Date: November 2025
+================================================================================ -->
 <body>
     <div id="root">
         <div className="login-container">
@@ -1305,5 +1342,6 @@ function DebugPage({ users, votes }) {
             document.getElementById('root').innerHTML = '<div style="color:white;text-align:center;padding:50px;"><h2>Errore caricamento</h2><p>' + error.message + '</p></div>';
         }
     </script>
+<!-- © 2025 Luigi Oliviero | Calcetto Rating App | Tutti i diritti riservati -->
 </body>
 </html>
