--- a/index.html
+++ b/index.html
@@ -1334,7 +1334,7 @@ const handleClaimProfile = async (playerId) => {
             isAdmin,
             isGoalkeeper: true,
             isInitialPlayer: false,
-            hasVotedOffline: false
+            hasVotedOffline: true
         };
         
         // Salva entrambi
