--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ function PlayerProfile({ player, votes, isOwnProfile }) {
     const playerVotes = votes.filter(v => v.playerId === player.id);
     const voteCount = playerVotes.length;
     const hasEnoughVotes = voteCount >= 5;
-    const averages = utils.calculateAverages(player.id, votes);
+const averages = utils.calculateAverages(player.id, votes, player);
     const overall = utils.calculateOverall(averages);
     const [flippedCard, setFlippedCard] = useState(null);
 	   const playerSkills = getSkillsForPlayer(player);
@@ -879,8 +879,8 @@ function AdminPage({ users, setUsers, votes, setVotes }) {
     };
 
     const handleEditVotes = (player) => {
-        const averages = utils.calculateAverages(player.id, votes);
-        if (averages) {
+const averages = utils.calculateAverages(player.id, votes, player);
+		if (averages) {
             const values = {};
             Object.keys(averages).forEach(k => { values[k] = averages[k].toFixed(2); });
             setVoteValues(values);
@@ -1231,8 +1231,8 @@ if (selectedPlayer) {
                 <div className="debug-player-list">
                     {players.map(player => {
                         const stats = getVoteStats(player.id);
-                        const averages = utils.calculateAverages(player.id, votes);
-                        const overall = utils.calculateOverall(averages);
+const averages = utils.calculateAverages(player.id, votes, player);
+			const overall = utils.calculateOverall(averages);
                         return (
                             <div key={player.id} className="debug-player-item" onClick={() => setSelectedPlayer(player.id)}>
                                 <span style={{fontWeight: '600', minWidth: '150px'}}>{player.name}</span>
