--- a/index.html
+++ b/index.html
@@ -622,6 +622,153 @@ function RoleEditModal({ user, onClose, onSuccess }) {
             );
         }
 
+
+// ============================================================================
+// COMPONENTI PARTITE
+// ============================================================================
+
+function MatchCard({ match, currentUser, users, onClick }) {
+    const [registrations, setRegistrations] = React.useState([]);
+    const [loading, setLoading] = React.useState(true);
+
+    React.useEffect(() => {
+        loadRegistrations();
+    }, [match.id]);
+
+    const loadRegistrations = async () => {
+        try {
+            const regs = await storage.getRegistrations(match.id);
+            setRegistrations(regs);
+        } catch (error) {
+            console.error('Errore caricamento iscrizioni:', error);
+        }
+        setLoading(false);
+    };
+
+    const getStatusBadge = () => {
+        if (match.status === 'OPEN' || match.status === 'CLOSED') {
+            return { text: '📝 APERTA', class: 'open' };
+        }
+        if (match.status === 'VOTING') {
+            return { text: '⭐ DA VOTARE', class: 'voting' };
+        }
+        return { text: '✅ FINITA', class: 'completed' };
+    };
+
+    const countGoalkeepers = () => {
+        return registrations.filter(r => r.isGoalkeeper).length;
+    };
+
+    const status = getStatusBadge();
+    const gkCount = countGoalkeepers();
+
+    if (loading) {
+        return (
+            <div className="player-card">
+                <div className="match-card-center">
+                    <h3>Caricamento...</h3>
+                </div>
+            </div>
+        );
+    }
+
+    return (
+        <div className={`player-card ${status.class}`} onClick={onClick}>
+            <div className="match-card-left">
+                <span className={`match-status ${status.class}`}>{status.text}</span>
+            </div>
+            <div className="match-card-center">
+                <h3>{utils.formatMatchDate(match.date)}</h3>
+            </div>
+            <div className="match-card-right">
+                {(match.status === 'OPEN' || match.status === 'CLOSED') && (
+                    <>
+                        <div className="match-info">
+                            👥 {registrations.length}/{match.maxPlayers} {utils.renderGoalkeeperIcons(gkCount)}
+                        </div>
+                        <div className="match-info" style={{fontSize: '0.75rem'}}>
+                            Chiude: {utils.formatDeadline(match.registrationDeadlineForced)}
+                        </div>
+                    </>
+                )}
+                {match.status === 'VOTING' && match.score && (
+                    <>
+                        <div className="match-info">
+                            Gialli {match.score.gialli}-{match.score.verdi} Verdi
+                        </div>
+                        <div className="match-info" style={{fontSize: '0.75rem'}}>
+                            🗳️ Vota entro domenica
+                        </div>
+                    </>
+                )}
+                {match.status === 'COMPLETED' && match.score && (
+                    <>
+                        <div className="match-info">
+                            Gialli {match.score.gialli}-{match.score.verdi} Verdi
+                        </div>
+                        <div className="match-info" style={{fontSize: '0.75rem'}}>
+                            🏆 {utils.getPlayerNameById(match.topScorer, users)}
+                        </div>
+                    </>
+                )}
+            </div>
+        </div>
+    );
+}
+
+function MatchesPage({ currentUser, users, onSelectMatch }) {
+    const [matches, setMatches] = React.useState([]);
+    const [loading, setLoading] = React.useState(true);
+
+    React.useEffect(() => {
+        loadMatches();
+    }, []);
+
+    const loadMatches = async () => {
+        setLoading(true);
+        try {
+            const data = await storage.getMatches();
+            setMatches(data);
+        } catch (error) {
+            console.error('Errore caricamento partite:', error);
+        }
+        setLoading(false);
+    };
+
+    return (
+        <div className="section-container">
+            <div className="section-header">
+                <h2>🏆 Le Tue Partite</h2>
+            </div>
+
+            {loading ? (
+                <div className="no-votes">
+                    <h3>Caricamento partite...</h3>
+                </div>
+            ) : matches.length === 0 ? (
+                <div className="no-votes">
+                    <h3>Nessuna partita in programma</h3>
+                    <p>L'admin creerà presto la prossima partita!</p>
+                </div>
+            ) : (
+                <div className="players-grid">
+                    {matches.map(match => (
+                        <MatchCard
+                            key={match.id}
+                            match={match}
+                            currentUser={currentUser}
+                            users={users}
+                            onClick={() => onSelectMatch(match.id)}
+                        />
+                    ))}
+                </div>
+            )}
+        </div>
+    );
+}
+
+
+		
         function PlayersListPage({ users, currentUser, votes, onSelectPlayer }) {
     const hasVoted = (playerId) => {
         return votes.some(v => v.voterId === currentUser.id && v.playerId === playerId);
@@ -1473,6 +1620,7 @@ const averages = utils.calculateAverages(player.id, votes, player);
             const [activeTab, setActiveTab] = useState('valuta');
             const [selectedPlayer, setSelectedPlayer] = useState(null);
             const [viewingProfile, setViewingProfile] = useState(null);
+			const [selectedMatch, setSelectedMatch] = useState(null);
             const [users, setUsers] = useState([]);
             const [votes, setVotes] = useState([]);
             const [showRoleModal, setShowRoleModal] = useState(false);
@@ -1658,6 +1806,15 @@ const handleAntonioProfileSelect = (profile) => {
 {showAntonioSelector && <ProfileSelectorModal profiles={antonioProfiles} onSelect={handleAntonioProfileSelect} />}
                     <Header user={currentUser} onLogout={handleLogout} />
                     <div className="nav-tabs">
+						<button className={`nav-tab ${activeTab === 'partite' ? 'active' : ''}`} 
+        onClick={() => { 
+            setActiveTab('partite'); 
+            setSelectedPlayer(null); 
+            setViewingProfile(null); 
+            setSelectedMatch(null); 
+        }}>
+    🏆 Partite
+</button>
                         <button className={`nav-tab ${activeTab === 'valuta' ? 'active' : ''}`} onClick={() => { setActiveTab('valuta'); setSelectedPlayer(null); setViewingProfile(null); }}>⚽ Valuta</button>
                         <button className={`nav-tab ${activeTab === 'profilo' ? 'active' : ''}`} onClick={() => { setActiveTab('profilo'); setSelectedPlayer(null); setViewingProfile(null); }}>👤 Profilo</button>
                         <button className={`nav-tab ${activeTab === 'classifiche' ? 'active' : ''}`} onClick={() => { setActiveTab('classifiche'); setSelectedPlayer(null); setViewingProfile(null); }}>📊 Classifiche</button>
@@ -1670,7 +1827,24 @@ const handleAntonioProfileSelect = (profile) => {
                             <PlayerProfile player={users.find(u => u.id === viewingProfile)} votes={votes} isOwnProfile={viewingProfile === currentUser.id} />
                         ) : selectedPlayer ? (
                             <RatingForm player={users.find(u => u.id === selectedPlayer)} onSubmit={handleVoteSubmit} onCancel={() => setSelectedPlayer(null)} />
-                        ) : activeTab === 'valuta' ? (
+                        ) : activeTab === 'partite' ? (
+    selectedMatch ? (
+        <div className="section-container">
+            <h2>Dettaglio Partita</h2>
+            <button className="btn btn-secondary" onClick={() => setSelectedMatch(null)}>
+                ← Torna alle Partite
+            </button>
+            <p>Match ID: {selectedMatch}</p>
+        </div>
+    ) : (
+        <MatchesPage 
+            currentUser={currentUser} 
+            users={users}
+            onSelectMatch={setSelectedMatch} 
+        />
+    )
+
+						) : activeTab === 'valuta' ? (
                             <PlayersListPage users={users} currentUser={currentUser} votes={votes} onSelectPlayer={setSelectedPlayer} />
                         ) : activeTab === 'profilo' ? (
                             <PlayerProfile player={currentUser} votes={votes} isOwnProfile={true} />
