--- a/index.html
+++ b/index.html
@@ -768,6 +768,267 @@ function MatchesPage({ currentUser, users, onSelectMatch }) {
 }
 
 
+// ============================================================================
+// VISTA ISCRIZIONI PARTITA
+// ============================================================================
+
+function MatchRegistrationView({ match, currentUser, onBack, onUpdate }) {
+    const [registrations, setRegistrations] = React.useState([]);
+    const [loading, setLoading] = React.useState(true);
+    const [actionLoading, setActionLoading] = React.useState(false);
+
+    React.useEffect(() => {
+        loadRegistrations();
+    }, [match.id]);
+
+    const loadRegistrations = async () => {
+        setLoading(true);
+        try {
+            const regs = await storage.getRegistrations(match.id);
+            setRegistrations(regs);
+        } catch (error) {
+            console.error('Errore caricamento iscrizioni:', error);
+        }
+        setLoading(false);
+    };
+
+    const isRegistered = registrations.some(r => r.playerId === currentUser.id);
+    const isClosed = match.status === 'CLOSED';
+
+    const handleRegister = async () => {
+        setActionLoading(true);
+        try {
+            await storage.registerPlayer(match.id, currentUser);
+            await loadRegistrations();
+            if (onUpdate) onUpdate();
+        } catch (error) {
+            console.error('Errore iscrizione:', error);
+            alert('Errore durante l\'iscrizione. Riprova.');
+        }
+        setActionLoading(false);
+    };
+
+    const handleUnregister = async (playerId, playerName) => {
+        const isCurrentUser = playerId === currentUser.id;
+        const message = isCurrentUser 
+            ? 'Vuoi disiscriverti dalla partita?' 
+            : `Rimuovere ${playerName} dalla partita?`;
+        
+        if (!confirm(message)) return;
+
+        setActionLoading(true);
+        try {
+            await storage.unregisterPlayer(match.id, playerId);
+            await loadRegistrations();
+            if (onUpdate) onUpdate();
+        } catch (error) {
+            console.error('Errore disiscrizione:', error);
+            alert('Errore durante la disiscrizione. Riprova.');
+        }
+        setActionLoading(false);
+    };
+
+    const countGoalkeepers = () => {
+        return registrations.filter(r => r.isGoalkeeper).length;
+    };
+
+    if (loading) {
+        return (
+            <div className="section-container">
+                <div className="section-header">
+                    <h2>Caricamento...</h2>
+                </div>
+            </div>
+        );
+    }
+
+    return (
+        <div className="section-container">
+            <div className="detail-card">
+                <div className="detail-header">
+                    <span className={`match-status ${isClosed ? 'completed' : 'open'}`}>
+                        {isClosed ? '🔒 ISCRIZIONI CHIUSE' : '📝 ISCRIZIONI APERTE'}
+                    </span>
+
+                    <div className="header-info-grid">
+                        <div className="header-main">
+                            <div className="detail-date">{utils.formatMatchDateFull(match.date)}</div>
+                            <div className="detail-time">⏰ Ore {utils.formatTime(match.date)}</div>
+                            <div className="detail-location">📍 {match.location}</div>
+                        </div>
+                        <div className="header-aside">
+                            <div className="recap-box">
+                                <div className="recap-row">
+                                    {utils.renderGoalkeeperIcons(countGoalkeepers())}
+                                    <span><strong>{registrations.length}</strong>/{match.maxPlayers}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div className="detail-content">
+                    <div className="players-list">
+                        <h3>👥 Chi Gioca ({registrations.length})</h3>
+                        {registrations.length === 0 ? (
+                            <div className="no-votes">
+                                <p>Nessun iscritto ancora. Sii il primo!</p>
+                            </div>
+                        ) : (
+                            registrations.map(reg => (
+                                <div key={reg.id} className={`player-item ${reg.isGoalkeeper ? 'gk' : ''}`}>
+                                    <div className="avatar">{utils.getInitials(reg.playerName)}</div>
+                                    <div className="player-info">
+                                        <div className="player-name">
+                                            {reg.playerName}
+                                            {reg.playerId === currentUser.id && ' (Tu)'}
+                                        </div>
+                                        <div className="player-role">
+                                            {reg.isGoalkeeper ? '🧤 Portiere' : 'Movimento'}
+                                        </div>
+                                    </div>
+
+                                    {/* X ROSSA: mostra solo se sono io O se sono admin */}
+                                    {(reg.playerId === currentUser.id || currentUser.isAdmin) && !isClosed && (
+                                        <div 
+                                            className="unsubscribe-btn" 
+                                            onClick={() => handleUnregister(reg.playerId, reg.playerName)}
+                                        >
+                                            ✕
+                                        </div>
+                                    )}
+                                </div>
+                            ))
+                        )}
+                    </div>
+
+                    {!isClosed && (
+                        <div className="deadline-msg">
+                            Iscriviti entro le ore 20 del {utils.formatDeadlineDisplay(match.registrationDeadlineDisplay)}<br/>
+                            per avere la possibilità di cambiare campo se necessario
+                        </div>
+                    )}
+
+                    {isClosed && (
+                        <div className="deadline-msg closed">
+                            Le iscrizioni sono chiuse.<br/>
+                            L'admin sta preparando le squadre!
+                        </div>
+                    )}
+
+                    <div className="btn-group">
+                        <button className="btn btn-secondary" onClick={onBack}>
+                            ← INDIETRO
+                        </button>
+                        {!isClosed && (
+                            isRegistered ? (
+                                <button className="btn btn-registered" disabled>
+                                    ✓ SONO GIÀ ISCRITTO
+                                </button>
+                            ) : (
+                                <button 
+                                    className="btn btn-primary" 
+                                    onClick={handleRegister} 
+                                    disabled={actionLoading}
+                                >
+                                    {actionLoading ? 'Attendere...' : '✓ ISCRIVITI'}
+                                </button>
+                            )
+                        )}
+                    </div>
+                </div>
+            </div>
+        </div>
+    );
+}
+
+
+// ============================================================================
+// ROUTER DETTAGLIO PARTITA
+// ============================================================================
+
+function MatchDetailRouter({ matchId, currentUser, onBack }) {
+    const [match, setMatch] = React.useState(null);
+    const [loading, setLoading] = React.useState(true);
+
+    React.useEffect(() => {
+        loadMatch();
+    }, [matchId]);
+
+    const loadMatch = async () => {
+        setLoading(true);
+        try {
+            const data = await storage.getMatch(matchId);
+            setMatch(data);
+        } catch (error) {
+            console.error('Errore caricamento partita:', error);
+        }
+        setLoading(false);
+    };
+
+    if (loading) {
+        return (
+            <div className="section-container">
+                <div className="section-header">
+                    <h2>Caricamento...</h2>
+                </div>
+            </div>
+        );
+    }
+
+    if (!match) {
+        return (
+            <div className="section-container">
+                <div className="no-votes">
+                    <h3>Partita non trovata</h3>
+                    <button className="btn btn-secondary" onClick={onBack}>
+                        ← Torna alle Partite
+                    </button>
+                </div>
+            </div>
+        );
+    }
+
+    // Router: quale vista mostrare in base allo status?
+    if (match.status === 'OPEN' || match.status === 'CLOSED') {
+        return (
+            <MatchRegistrationView 
+                match={match} 
+                currentUser={currentUser} 
+                onBack={onBack}
+                onUpdate={loadMatch}
+            />
+        );
+    }
+
+    if (match.status === 'VOTING') {
+        return (
+            <div className="section-container">
+                <div className="no-votes">
+                    <h3>⭐ Partita da votare</h3>
+                    <p>Vista votazioni in arrivo...</p>
+                    <button className="btn btn-secondary" onClick={onBack}>
+                        ← Torna alle Partite
+                    </button>
+                </div>
+            </div>
+        );
+    }
+
+    // COMPLETED
+    return (
+        <div className="section-container">
+            <div className="no-votes">
+                <h3>✅ Partita conclusa</h3>
+                <p>Vista risultati in arrivo...</p>
+                <button className="btn btn-secondary" onClick={onBack}>
+                    ← Torna alle Partite
+                </button>
+            </div>
+        </div>
+    );
+}
+		
 		
         function PlayersListPage({ users, currentUser, votes, onSelectPlayer }) {
     const hasVoted = (playerId) => {
@@ -1829,13 +2090,11 @@ const handleAntonioProfileSelect = (profile) => {
                             <RatingForm player={users.find(u => u.id === selectedPlayer)} onSubmit={handleVoteSubmit} onCancel={() => setSelectedPlayer(null)} />
                         ) : activeTab === 'partite' ? (
     selectedMatch ? (
-        <div className="section-container">
-            <h2>Dettaglio Partita</h2>
-            <button className="btn btn-secondary" onClick={() => setSelectedMatch(null)}>
-                ← Torna alle Partite
-            </button>
-            <p>Match ID: {selectedMatch}</p>
-        </div>
+        <MatchDetailRouter 
+            matchId={selectedMatch}
+            currentUser={currentUser}
+            onBack={() => setSelectedMatch(null)}
+        />
     ) : (
         <MatchesPage 
             currentUser={currentUser} 
