--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@ checkAndUpdateMatchStatus: async (match) => {
     }
     
     return match;
-}  // 👈 NO virgola (ultima funzione di storage)
-};  // 👈 Chiude oggetto storage
+},  // 👈 Chiude oggetto storage
 
 
 		
